--- a/client/Components/CreationForms/CreationForms.css
+++ b/client/Components/CreationForms/CreationForms.css
@@ -26,10 +26,10 @@
 }
 
 .create-new-char-form {
-  height: 400px;
+  height: 410px;
   width: 600px;
   position: relative;
-  padding-top: 95px;
+  padding-top: 50px;
   background-color: #ffffff;
   border-bottom: 3px solid #002d45;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
@@ -49,6 +49,7 @@
 }
 
 #search-monsters {
+  flex-wrap: nowrap;
   justify-content: center;
 }
 
