--- a/client/Components/Encounters/Encounter.css
+++ b/client/Components/Encounters/Encounter.css
@@ -9,7 +9,7 @@
 
 
 .tracker-display {
-  width: 80%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -33,7 +33,7 @@
   padding: 5px 12px;
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: .65fr 2.5fr .5fr .6fr .15fr;
+  grid-template-columns: .65fr 2.5fr .75fr .6fr .15fr;
   align-items: center;
   position: relative;
   text-align: center;
@@ -72,9 +72,21 @@
 }
 
 .health-display {
+  width: 100%;
   padding: 10px;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-evenly;
+}
+
+.health-input-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.health-input::-webkit-outer-spin-button,
+.health-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
