--- a/client/Components/Guides/Guide.css
+++ b/client/Components/Guides/Guide.css
@@ -1,7 +1,6 @@
 .guide-title {
   width: 100%;
   height: 85px;
-  padding-left: 25%;
   position: relative;
   display: flex;
   justify-content: center;
@@ -10,29 +9,61 @@
 
 .guide-body {
   width: 100%;
-  padding-left: 3%;
+  gap: 10px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#guide-filter-wrap {
+  width: 92%;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #cde3f1e6;
+  border-top: 5px solid #166696;
+  border-bottom: 2px solid #166696;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+#filter-collapse-btn {
+  outline: none;
+  border: none;
+  border-radius: 3px 3px 0 0;
+  text-decoration: underline;
+  color: #002d45;
+  box-shadow: none;
+  background: none;
+}
+#filter-collapse-btn:hover {
+  background-color: inherit;
+  background: none;
+  color: #002d45a0;
+}
+
+.guide-filters {
+  width: 92%;
+  text-align: center;
   position: relative;
+  padding: 5px 20px;
+  outline: none;
 }
 
-#guide-filters {
-  height: fit-content;
-  width: 22%;
-  gap: 5px;
-  position: sticky;
-  top: 20px;
-  padding: 20px 0;
-}
-
-#clear-btn {
-  font-weight: 400;
+.guide-filter-form .col {
   padding: 5px 12px;
-  margin: 2px;
+}
+
+#form-filter-btns {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .guide-results {
-  width: 75%;
+  width: 100%;
   display: table;
 }
 
@@ -43,7 +74,6 @@
   color: #040114;
   border-radius: 3px 3px 0 0;
   background-color: #166696;
-  border: none;
   color: #ffffff;
 }
 
