--- a/client/Components/Nav/Footer.css
+++ b/client/Components/Nav/Footer.css
@@ -1,7 +1,7 @@
 #main-footer {
   height: 50px;
   width: 100%;
-  padding: 0 25px 5px 15px;
+  padding: 0 25px 0 15px;
   position: absolute;
   bottom: 0;
   display: flex;
@@ -15,9 +15,14 @@
   height: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: center;
+  align-content: flex-start;
   flex-wrap: wrap;
+}
+
+#copyright-stuff > p, #copyright-stuff > h6 {
+  margin: 0;
+  font-size: .9rem;
 }
 
 #social-section {
