--- a/client/Components/Nav/Navi.css
+++ b/client/Components/Nav/Navi.css
@@ -2,11 +2,7 @@
   width: 100%;
   height: 55px;
   padding: 0 25px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   color: #ffffff;
-  background-color: #002d45;
   font-family: 'MedievalSharp', sans-serif;
 }
 
@@ -14,6 +10,10 @@
   height: 100%;
   display: flex;
   align-items: center;
+}
+
+.main-nav-divs > p {
+  margin: 0;
 }
 
 .nav-links-wrapper {
@@ -58,4 +58,34 @@
 }
 .login-logout:hover {
   background-position: bottom;
+}
+
+
+#stuff-nav {
+  height: 40px;
+  padding: 0 15px;
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  border-top: #ffffff .5px solid;
+  background-color: #002d45;
+  font-family: 'MedievalSharp', sans-serif;
+}
+
+.stuff-nav-links-wrapper {
+  height: 100%;
+  padding: 0 3px;
+  display: flex;
+  align-items: center;
+}
+
+.stuff-nav-links {
+  font-size: .85rem;
+  padding: 0 6px;
+  border-radius: 3px;
+}
+
+.stuff-nav-links-wrapper:has(.stuff-nav-links.active) {
+  border-bottom: #ffffff 3px solid;
+  border-top: #166696 3px solid;
 }
